--- a/booking.html
+++ b/booking.html
@@ -2,56 +2,115 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Book a Room - Jayvee Hall of Mansion</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Booking - Jayvee Hall of Mansion</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {
+      margin: 0;
+      font-family: Arial, sans-serif;
       background: url('assets/bgindex.jpg') no-repeat center center/cover;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      margin: 0;
-      font-family: Arial, sans-serif;
     }
+
     .booking-container {
-      background: rgba(255, 255, 255, 0.95);
+      background: rgba(255,255,255,0.95);
       padding: 30px;
-      border-radius: 15px;
+      border-radius: 12px;
       width: 90%;
-      max-width: 400px;
+      max-width: 500px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
       text-align: center;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
     }
-    input, select, button {
+
+    h2 { margin-bottom: 20px; }
+
+    input, select {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 8px 0;
+      border-radius: 8px;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      font-size: 16px;
     }
+
     button {
+      width: 100%;
+      padding: 12px;
       background: #333;
       color: white;
-      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
       cursor: pointer;
+      margin-top: 10px;
     }
+
     button:hover { background: #555; }
+
+    .success-message {
+      display: none;
+      color: green;
+      margin-top: 10px;
+      font-weight: bold;
+    }
+
+    /* Receipt Preview */
+    #receipt {
+      display: none;
+      position: relative;
+      width: 500px;
+      padding: 30px;
+      text-align: center;
+      background: url('assets/bgindex.jpg') no-repeat center center/cover;
+      border: 2px solid #333;
+      border-radius: 12px;
+      color: #000;
+    }
+
+    #receipt h3 { margin-bottom: 15px; }
+    #receipt p { margin: 6px 0; font-weight: bold; }
   </style>
 </head>
 <body>
+
   <div class="booking-container">
-    <h2>Book Your Room</h2>
-    <input type="text" id="name" placeholder="Full Name" required>
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="date" id="date" required>
-    <select id="roomSelect">
-      <option value="Room 101 - Deluxe Room">Room 101 - Deluxe Room</option>
-      <option value="Room 102 - Executive Suite">Room 102 - Executive Suite</option>
-      <option value="Room 103 - Family Room">Room 103 - Family Room</option>
-      <option value="Room 104 - Presidential Suite">Room 104 - Presidential Suite</option>
-    </select>
-    <button onclick="submitBooking()">Submit Booking</button>
+    <h2>Book Your Stay</h2>
+    <form id="bookingForm">
+      <input type="text" id="name" placeholder="Full Name" required />
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="date" id="checkin" required />
+      <input type="date" id="checkout" required />
+      <select id="room" required>
+        <option value="">Select Room</option>
+        <option value="Room 101 - Deluxe Room">Room 101 - Deluxe Room</option>
+        <option value="Room 102 - Executive Suite">Room 102 - Executive Suite</option>
+        <option value="Room 103 - Family Room">Room 103 - Family Room</option>
+        <option value="Room 104 - Presidential Suite">Room 104 - Presidential Suite</option>
+      </select>
+      <button type="submit">Submit Booking</button>
+      <p class="success-message" id="successMessage">Booking submitted! Your receipt is downloading...</p>
+    </form>
+  </div>
+
+  <!-- Hidden Receipt Template -->
+  <div id="receipt">
+    <h3>Jayvee Hall of Mansion</h3>
+    <p><strong>Booking Receipt</strong></p>
+    <p id="rName"></p>
+    <p id="rEmail"></p>
+    <p id="rPhone"></p>
+    <p id="rRoom"></p>
+    <p id="rCheckin"></p>
+    <p id="rCheckout"></p>
+    <p>Status: Pending</p>
+    <p>Thank you for booking with us!</p>
   </div>
 
   <script type="module">
@@ -72,34 +131,60 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    window.submitBooking = function() {
-      const name = document.getElementById("name").value;
-      const email = document.getElementById("email").value;
-      const date = document.getElementById("date").value;
-      const room = document.getElementById("roomSelect").value;
+    document.getElementById('bookingForm').addEventListener('submit', async function(e){
+      e.preventDefault();
 
-      if (!name || !email || !date) {
-        alert("Please fill all fields");
-        return;
-      }
+      const booking = {
+        id: Date.now(),
+        name: document.getElementById('name').value,
+        email: document.getElementById('email').value,
+        phone: document.getElementById('phone').value,
+        checkin: document.getElementById('checkin').value,
+        checkout: document.getElementById('checkout').value,
+        room: document.getElementById('room').value,
+        status: 'Pending'
+      };
 
-      // Save email to localStorage for cross-device sync
-      localStorage.setItem("userEmail", email);
+      // Save locally
+      const bookings = JSON.parse(localStorage.getItem('bookings')) || [];
+      bookings.push(booking);
+      localStorage.setItem('bookings', JSON.stringify(bookings));
 
+      // Save to Firebase
       const bookingsRef = ref(db, 'bookings');
       const newBookingRef = push(bookingsRef);
+      await set(newBookingRef, booking);
 
-      set(newBookingRef, {
-        name,
-        email,
-        date,
-        room,
-        status: "Pending"
-      }).then(() => {
-        alert("Booking submitted successfully!");
-        window.location.href = "home.html";
-      });
-    }
+      // Prepare Receipt
+      document.getElementById('rName').innerText = "Name: " + booking.name;
+      document.getElementById('rEmail').innerText = "Email: " + booking.email;
+      document.getElementById('rPhone').innerText = "Phone: " + booking.phone;
+      document.getElementById('rRoom').innerText = "Room: " + booking.room;
+      document.getElementById('rCheckin').innerText = "Check-in: " + booking.checkin;
+      document.getElementById('rCheckout').innerText = "Check-out: " + booking.checkout;
+
+      document.getElementById('successMessage').style.display = 'block';
+      const receipt = document.getElementById('receipt');
+      receipt.style.display = 'block';
+
+      const canvas = await html2canvas(receipt);
+      const imgData = canvas.toDataURL('image/png');
+      const { jsPDF } = window.jspdf;
+      const pdf = new jsPDF('p', 'mm', 'a4');
+      const imgProps = pdf.getImageProperties(imgData);
+      const pdfWidth = pdf.internal.pageSize.getWidth();
+      const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
+      pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
+      pdf.save(`Booking_Receipt_${booking.id}.pdf`);
+
+      receipt.style.display = 'none';
+
+      setTimeout(() => {
+        document.getElementById('bookingForm').reset();
+        window.location.href = 'home.html';
+      }, 3000);
+    });
   </script>
+
 </body>
-</html>
+      </html>
